--- a/src/index.css
+++ b/src/index.css
@@ -36,10 +36,10 @@ body {
 }
 
 
-/* .react-player {
+.react-player {
   height: 77vh !important;
   width: 100% !important;
-} */
+}
 
 .search-bar{
   border:none;
@@ -76,13 +76,13 @@ body {
 }
 
 @media screen and (max-width: 600px) {
-  /*
+ 
    .scroll-horizontal {
     overflow: auto !important;
   }
   .react-player {
     height: 45vh !important;
-  } */
+  } 
   .search-bar{
     width:250px;
   }
